added roles and attributes in registration