@@ -2,17 +2,17 @@ package com.oauth2.resource_server;
 
 import com.oauth2.resource_server.dto.UserRegistrationDto;
 import jakarta.annotation.PostConstruct;
+import jakarta.ws.rs.NotFoundException;
 import jakarta.ws.rs.core.Response;
 import org.apache.catalina.User;
 import org.keycloak.OAuth2Constants;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.admin.client.KeycloakBuilder;
 import org.keycloak.admin.client.resource.RealmResource;
+import org.keycloak.admin.client.resource.RoleMappingResource;
+import org.keycloak.admin.client.resource.RoleResource;
 import org.keycloak.admin.client.resource.UsersResource;
-import org.keycloak.representations.idm.CredentialRepresentation;
-import org.keycloak.representations.idm.UserProfileAttributeMetadata;
-import org.keycloak.representations.idm.UserProfileMetadata;
-import org.keycloak.representations.idm.UserRepresentation;
+import org.keycloak.representations.idm.*;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
@@ -20,6 +20,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class KeycloakAdminService {
@@ -61,11 +62,7 @@ public class KeycloakAdminService {
 
         // Custom attributes
         Map<String, List<String>> attributes = new HashMap<>();
-//        attributes.put("phoneNumber", List.of(dto.getPhoneNumber()));
-//        attributes.put("address", List.of(dto.getAddress()));
-//        attributes.put("branchId", List.of(dto.getBranchId()));
-//        metadata.setAttributes(attributes);
-//        user.setUserProfileMetadata();
+        attributes.put("department", Collections.singletonList(dto.getDepartment()));
         user.setAttributes(attributes);
 
         Response response = usersResource.create(user);
@@ -80,6 +77,17 @@ public class KeycloakAdminService {
         password.setType(CredentialRepresentation.PASSWORD);
         password.setValue(dto.getPassword());
         password.setTemporary(false);
+
+        if (dto.getRoles() != null && !dto.getRoles().isEmpty()) {
+            RealmResource realmRes = keycloak.realm(realm);
+            RoleMappingResource roleMappingResource = realmRes.users().get(userId).roles();
+
+            List<RoleRepresentation> realmRoles = dto.getRoles().stream()
+                    .map(roleName -> realmRes.roles().get(roleName).toRepresentation())
+                    .collect(Collectors.toList());
+
+            roleMappingResource.realmLevel().add(realmRoles);
+        }
 
         usersResource.get(userId).resetPassword(password);
 
